lines 37/40